sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:14: error: ')' expected but '}' found.
    }
    ^