sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
  for (i <- 0 to length-1) {
    
		var minpos=i;
    
		for (j <- i to length-1) {
      
			if (plusPetit(j,minpos) {
        
				minpos = j;
			}
		}
		echange(j,minpos);
	}
}